--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ black = "^24.1.1"
 isort = "^5.13.2"
 mypy = "^1.8.0"
 ruff = "^0.2.1"
+pytest-asyncio = "^0.26.0"
 
 [build-system]
 requires = ["poetry-core"]
