--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ python-multipart = "^0.0.9"
 httpx = "^0.26.0"
 pydantic-settings = "^2.9.1"
 aiohttp = "^3.11.18"
+celery = {extras = ["sqlalchemy"], version = "^5.5.2"}
+sqlalchemy = "^2.0.41"
+boto3 = "^1.38.22"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
