--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ aiohttp = "^3.11.18"
 celery = {extras = ["sqlalchemy"], version = "^5.5.2"}
 sqlalchemy = "^2.0.41"
 boto3 = "^1.38.22"
+mangum = "^0.19.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
