--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ celery = {extras = ["sqlalchemy"], version = "^5.5.2"}
 sqlalchemy = "^2.0.41"
 boto3 = "^1.38.22"
 mangum = "^0.19.0"
+kombu = {extras = ["sqs"], version = "^5.5.3"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
