--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ isort = "^5.13.2"
 mypy = "^1.8.0"
 ruff = "^0.2.1"
 pytest-asyncio = "^0.26.0"
+flake8 = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
