--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ sqlalchemy = "^2.0.41"
 boto3 = "^1.38.22"
 mangum = "^0.19.0"
 kombu = {extras = ["sqs"], version = "^5.5.3"}
+google-auth = "^2.27.0"
+google-api-python-client = "^2.118.0"
+google-auth-oauthlib = "^1.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
